<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_alert">
        <TextView
            android:id="@+id/appNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="cursive"
            android:gravity="center"
            android:contentDescription="@string/app_name"
            android:layout_centerHorizontal="true"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/appVersionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appNameTxt"
            android:text="@string/app_version"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:contentDescription="@string/app_version"
            android:textColor="@color/colorInfoVersion" />
        <ImageView
            android:id="@+id/imageInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:src="@mipmap/ic_icon_wise_frame_foreground"
            android:layout_below="@+id/appVersionTxt"
            android:contentDescription="@string/image_info" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@+id/imageInfo"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/termsService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/terms_service"
                android:textSize="20sp"
                android:textColor="@color/colorStartGradient"
                android:contentDescription="@string/terms_service"
                android:background="@drawable/border_link"
                android:gravity="center" />
            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/privacy_policy"
                android:textSize="20sp"
                android:textColor="@color/colorStartGradient"
                android:background="@drawable/border_link"
                android:contentDescription="@string/privacy_policy"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_close"
        style="?borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="-20dp"
        android:background="@drawable/close_button"
        android:contentDescription="@string/btn_close_dialog" />

</LinearLayout>