<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/contentWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/border_alert">
        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_icon_wise_frame_foreground"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img"
            android:text="@string/welcome_app_title"
            android:textSize="20sp"
            android:textColor="@color/colorAccent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_below="@+id/title"
            android:text="@string/welcome_app_text"
            android:textSize="17sp"
            android:textColor="@color/colorInfoVersion"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="?borderlessButtonStyle"
        android:background="@drawable/close_button"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/btn_close_dialog" />

</LinearLayout>