<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/contact_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground">
        <ImageView
            android:id="@+id/ic_contact_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_contact_developer"
            android:contentDescription="@string/ic_contact_developer" />
        <TextView
            android:id="@+id/title_contact_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/contact_developer"
            android:contentDescription="@string/contact_developer"
            android:layout_toEndOf="@+id/ic_contact_developer"
            android:textSize="18sp"
            android:layout_marginStart="15dp" />
        <TextView
            android:id="@+id/select_contact_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_contact_developer"
            android:layout_alignStart="@id/title_contact_developer"
            android:textColor="@color/colorInfoVersion"
            android:text="@string/select_contact_developer"
            android:visibility="visible"
            android:textSize="16sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/comment_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground">
        <ImageView
            android:id="@+id/ic_comment_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_comment_app"
            android:contentDescription="@string/ic_comment_app" />
        <TextView
            android:id="@+id/title_comment_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/comment_app"
            android:contentDescription="@string/comment_app"
            android:layout_toEndOf="@+id/ic_comment_app"
            android:layout_marginStart="15dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/select_comment_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_comment_app"
            android:layout_alignStart="@+id/title_comment_app"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorInfoVersion"
            android:text="@string/select_comment_app"
            android:visibility="visible"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/other_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground">
        <ImageView
            android:id="@+id/ic_other_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_logo_ab_white"
            android:contentDescription="@string/ic_comment_app" />
        <TextView
            android:id="@+id/title_other_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/other_app"
            android:contentDescription="@string/other_app"
            android:layout_toEndOf="@+id/ic_other_app"
            android:layout_marginStart="15dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/select_other_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_other_app"
            android:layout_alignStart="@+id/title_other_app"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorInfoVersion"
            android:text="@string/select_other_app"
            android:visibility="visible"
            android:textSize="16sp"/>

    </RelativeLayout>

</LinearLayout>