<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_alert">
        <TextView
            android:id="@+id/image_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="20sp"
            android:contentDescription="@string/name_image"/>
        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/image_name"
            android:scaleType="centerCrop"
            android:contentDescription="@string/full_image"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-20dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="?borderlessButtonStyle"
            android:contentDescription="@string/btn_close_dialog"
            android:background="@drawable/close_button"/>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            style="?borderlessButtonStyle"
            android:background="@drawable/delete_button"
            android:contentDescription="@string/btn_delete_image_single" />
    </LinearLayout>

</LinearLayout>